--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		 <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -52,13 +57,20 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<dependencies>    <!-- 修改代码后自动生效，Reload Java classes without restarting the container -->  
-                <dependency>  
-                    <groupId>org.springframework</groupId>  
-                    <artifactId>springloaded</artifactId>  
-                    <version>1.2.6.RELEASE</version>  
-                </dependency>  
-            </dependencies>  
+	                <dependency>  
+	                    <groupId>org.springframework</groupId>  
+	                    <artifactId>springloaded</artifactId>  
+	                    <version>1.2.6.RELEASE</version>  
+	                </dependency>  
+	            </dependencies>  
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
 		</plugins>
 	</build>
 
